[package]
name = "gitlab_ci_parser"
version = "0.0.2"
authors = ["Giles Cope <gilescope@gmail.com>"]
edition = "2018"

[lib]
name = "gitlab_ci_parser"
path = "src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_yaml = { version="0.8", default_features=false }
serde_derive = { version="1.0", default_features=false }
serde = { version="1.0", default_features=false }
yaml-merge-keys = {version="0.4", features=["serde_yaml"]}
tracing = "0.1"

[dev-dependencies]
tracing-subscriber = "0.2"