[package]
name = "gitlab_ci_parser"
version = "0.0.4"
description = "A parser for .gitlab-ci.yml file format"
authors = ["Giles Cope <gilescope@gmail.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/gilescope/gitlab-ci-parser.git"
license = "MIT OR Apache-2.0"
keywords = ["gitlab", "parser", "ci"]
categories = ["development-tools::build-utils"]

[lib]
name = "gitlab_ci_parser"
path = "src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_yaml = { version="0.8", default_features=false }
serde_derive = { version="1.0", default_features=false }
serde = { version="1.0", default_features=false }
yaml-merge-keys = {version="0.4", features=["serde_yaml"]}
tracing = "0.1"

[dev-dependencies]
tracing-subscriber = "0.2"